package com.urise.webapp.model;

import java.util.ArrayList;
import java.util.List;

public class JobEducationListSection extends AbstractSection{
    private final List<String> JobEducationListSection = new ArrayList<>();
}
