package com.urise.webapp.model;

public class JobEducationNameSection extends AbstractSection {
    private String JobEducationName;
    private String JobEducationDate;
}
