package com.urise.webapp.model;

public class TextSection extends AbstractSection {
    private String textSection;
}
